--- a/app/index.html
+++ b/app/index.html
@@ -10,15 +10,21 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <base href="/">
+
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.min.css" />
+    <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css" />
+    <link rel="stylesheet" href="bower_components/highlightjs/styles/default.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <link rel="stylesheet" href="bower_components/highlightjs/styles/monokai_sublime.css" />
   </head>
   <body ng-app="angularOnCoffeeApp">
     <!--[if lt IE 7]>
@@ -67,6 +73,10 @@
     <script src="bower_components/angular-fullscreen/src/angular-fullscreen.js"></script>
     <script src="bower_components/mousetrap/mousetrap.js"></script>
     <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
+    <script src="bower_components/codemirror/lib/codemirror.js"></script>
+    <script src="bower_components/angular-ui-codemirror/ui-codemirror.js"></script>
+    <script src="bower_components/highlightjs/highlight.pack.js"></script>
+    <script src="bower_components/angular-highlightjs/angular-highlightjs.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -74,6 +84,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/slide.js"></script>
+        <script src="scripts/filters/strreplace.js"></script>
         <!-- endbuild -->
 </body>
 </html>
