Finished 17th slide Angular - Bootstraping

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,13 @@
     <!-- endbuild -->
 
     <link rel="stylesheet" href="bower_components/highlightjs/styles/monokai_sublime.css" />
+    <style type="text/css">
+        .hljs-attribute {
+            color: #F92672 !important;
+            font-weight: bold;
+
+        }
+    </style>
   </head>
   <body ng-app="angularOnCoffeeApp">
     <!--[if lt IE 7]>
