18th slide finished - AngularJS - Templates and binding

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/slide.js"></script>
         <script src="scripts/filters/strreplace.js"></script>
+        <script src="scripts/controllers/demo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
