--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.min.css" />
-    <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css" />
     <link rel="stylesheet" href="bower_components/highlightjs/styles/default.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -29,7 +28,6 @@
         .hljs-attribute {
             color: #F92672 !important;
             font-weight: bold;
-
         }
     </style>
   </head>
@@ -58,6 +56,8 @@
     <![endif]-->
 
     <!-- build:js scripts/vendor.js -->
+    <script src="scripts/vendor/socket.io.js"></script>
+    <script src="scripts/vendor/sails.io.js"></script>
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -80,8 +80,6 @@
     <script src="bower_components/angular-fullscreen/src/angular-fullscreen.js"></script>
     <script src="bower_components/mousetrap/mousetrap.js"></script>
     <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
-    <script src="bower_components/codemirror/lib/codemirror.js"></script>
-    <script src="bower_components/angular-ui-codemirror/ui-codemirror.js"></script>
     <script src="bower_components/highlightjs/highlight.pack.js"></script>
     <script src="bower_components/angular-highlightjs/angular-highlightjs.js"></script>
     <!-- endbower -->
@@ -93,6 +91,7 @@
         <script src="scripts/services/slide.js"></script>
         <script src="scripts/filters/strreplace.js"></script>
         <script src="scripts/controllers/demo.js"></script>
+        <script src="scripts/services/demorest.js"></script>
         <!-- endbuild -->
 </body>
 </html>
