Edited Gruntfile and index.html

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <!--manifest="cache.manifest"-->
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>AngularJS with CoffeeScript</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <base href="/">
@@ -21,9 +21,10 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="bower_components/highlightjs/styles/monokai_sublime.css" />
     <!-- endbuild -->
 
-    <link rel="stylesheet" href="bower_components/highlightjs/styles/monokai_sublime.css" />
+
     <style type="text/css">
         .hljs-attribute {
             color: #F92672 !important;
