Added gh-pages url prefix

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]--><!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]--><!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]--><!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><!--manifest="cache.manifest"--><head><meta charset="utf-8"><title>AngularJS with CoffeeScript</title><meta name="description" content=""><meta name="viewport" content="width=device-width"><base href="/"><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel="stylesheet" href="styles/cdd89f76.vendor.css"><link rel="stylesheet" href="styles/5e0d64f2.main.css"><style type="text/css">.hljs-attribute {
+<!doctype html><!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]--><!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]--><!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]--><!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><!--manifest="cache.manifest"--><head><meta charset="utf-8"><title>AngularJS with CoffeeScript</title><meta name="description" content=""><meta name="viewport" content="width=device-width"><base href="/"><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel="stylesheet" href="http://stepanic.github.io/angular-on-coffee/styles/cdd89f76.vendor.css"><link rel="stylesheet" href="http://stepanic.github.io/angular-on-coffee/styles/5e0d64f2.main.css"><style type="text/css">.hljs-attribute {
             color: #F92672 !important;
             font-weight: bold;
         }</style><body ng-app="angularOnCoffeeApp"><!--[if lt IE 7]>
@@ -10,6 +10,6 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');</script><!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
-    <![endif]--><script src="scripts/9d9fa4e1.vendor.js"></script><script src="scripts/693393b0.scripts.js"></script>
+    <script src="http://stepanic.github.io/angular-on-coffee/bower_components/es5-shim/es5-shim.js"></script>
+    <script src="http://stepanic.github.io/angular-on-coffee/bower_components/json3/lib/json3.min.js"></script>
+    <![endif]--><script src="http://stepanic.github.io/angular-on-coffee/scripts/9d9fa4e1.vendor.js"></script><script src="http://stepanic.github.io/angular-on-coffee/scripts/693393b0.scripts.js"></script>
